style: fix end of page spacing in mobile and tablet

--- a/src/style.css
+++ b/src/style.css
@@ -193,6 +193,7 @@ body.theme-transition * {
 
 body {
   padding-inline: var(--spacing-200);
+  padding-block-end: var(--spacing-400);
   background: var(--body-bg);
 }
 
